contrast issues resolved

--- a/css/style.css
+++ b/css/style.css
@@ -67,14 +67,13 @@ header{
 }
 
 .nav_item a:hover, a:focus{
-  
+
   color: #0000ff;
   text-decoration: underline;
   -webkit-text-decoration-style: dotted;
           text-decoration-style: dotted;
 }
 
-h1{display:none;}
 
 main {
   grid-row: 3/-2;
@@ -87,10 +86,12 @@ main {
   text-align: start;
   line-height: 1.25;
   -webkit-text-fill-color: rgba(0, 0, 0, 0);
-  -webkit-text-stroke: 1px #ffffff;
-  padding: 0.5em;
-  bottom: 2em;
+  -webkit-text-stroke: 0.025em #000000;
+  padding-left: 0.5em;
+  bottom: 3em;
   position: fixed;
+  background: #ffff00;
+  width: 75%;
 }
 
 .slideshow-container {
@@ -101,10 +102,12 @@ main {
 /* Hide the images by default */
 .slides {
   display: none;
+  overflow: hidden;
 }
 
 .slides img{
-  height: 800px;
+  height: 700px;
+  min-width: 100%;
   object-fit: cover;
 }
 
@@ -115,11 +118,12 @@ main {
   top: 50%;
   width: auto;
   margin-top: -3.5em;
-  padding: 1em;
-  color: white;
-  font-size: 18px;
-  transition: 0.6s ease;
+  padding: 0.5em;
+  color: #000000;
+  font-size: 1em;
+  transition: 0.8s ease;
   user-select: none;
+  background: #ffff00;
 }
 
 /* Position the "next button" to the right */
@@ -137,12 +141,12 @@ main {
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .25} 
+  from {opacity: .25}
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: .25} 
+  from {opacity: .25}
   to {opacity: 1}
 }
 
@@ -160,29 +164,4 @@ footer{
 
 .smaller {
   font-size: 0.75em
-}
-
-@media screen and (min-width: 850px){
-
-  /* Navbar */
-  header{
-    /*Your code here again.*/
-    justify-content: space-between;
-    flex-direction: row;
-  }
-
-
-  .nav_item a{
-    padding: 1.5em;
-  }
-}
-
-@media print {
-
-}
-
-/*Your code here again.*/
-/*Add media query to handle reduced-motion*/
-@media (prefers-reduced-motion: reduce){
-
 }
